Correctly resizes svgs on mobile

--- a/client/styles/styles.less
+++ b/client/styles/styles.less
@@ -17,7 +17,8 @@
 
 html, body {
     margin: 0;
-    height: 100%;
+	height: 100%;
+	width: 100%;
 }
 
 .bg-dark {
@@ -36,8 +37,7 @@ html, body {
 }
 
 main {
-	width: 100vw;
-	min-width: 300px;
+	width: 100%;
 	height: 100%;
 	display: flex;
 }
@@ -95,8 +95,7 @@ main {
 		border-bottom: 1.2px solid @textPrimaryColor;
 	}
 	.gameBlocks {
-		flex-grow: 1;
-		flex: 1;
+		height: calc(100% - 230px);
 		rect {
 			stroke-width: 5;
 			stroke-opacity: 0;
@@ -129,8 +128,7 @@ main {
 		}
 	}
 	.gameBlocks, .inputBlocks {
-		width: 500px;
-		margin: 0 auto;
+		width: 100%;
 	}
 	.user1Info, .user2Info {
 		height: 40px;
@@ -561,8 +559,8 @@ main {
 			top: 100px;
 		}
 		#game {
-			.gameBlocks, .inputBlocks {
-				width: 100%;
+			.gameBlocks {
+				height: calc(100% - 180px);
 			}
 
 			.inputBlocks {
@@ -576,7 +574,6 @@ main {
 			}
 			.user1Info, .user2Info {
 				font-size: 1.2rem;
-				line-height: 2.4rem;
 				height: 30px;
 			}
 		}
